- Fix logo asset path - Add overflow property to prevent content jumping

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,3 +36,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
 }
+
+html {
+  overflow-y: scroll;
+}
